--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -115,11 +115,12 @@ h1, h2, h3, h4, p {
   color: #868686;
   padding: 0.5rem;
   text-transform: uppercase;
+  display: block;
+  width: 100%;
 }
 
 .btn--block {
-  display: block;
-  width: 100%;
+
 }
 
 .cards {
@@ -160,7 +161,7 @@ h1, h2, h3, h4, p {
   padding: 1rem;
 }
 
-.card__image {
+.members-image {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -193,7 +194,7 @@ h1, h2, h3, h4, p {
   background-image: url("src/assets/images/lab-members-aleksandar.jpg");
 }
 
-.card__title {
+.members-title {
   color: gray;
   font-size: 1.25rem;
   font-weight: 300;
@@ -201,7 +202,7 @@ h1, h2, h3, h4, p {
   text-transform: uppercase;
 }
 
-.card__text {
+.members-text {
   flex: 1 1 auto;
   font-size: 0.875rem;
   line-height: 1.5;
