--- a/app/src/app/lab-members/component/lab-members/lab-members.component.html
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.html
@@ -1,1 +1,15 @@
-<p>lab-members works!</p>
+<div class="main flex jc-center ai-center">
+    <h1 class="ta-center b-b">{{page.title}}</h1>
+</div>
+<div class="grid m-y-xl">
+    <div class="col-4" *ngFor="let item of items$ | async">
+        <div class="card">
+            <div class="members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
+            <div class="flex flex-1 fd-col members-wrapper">
+                <div class="members-title">{{item.name}}</div>
+                <p class="members-text m-y-s" [innerHTML]="item.description | text"></p>
+                <button class="members-btn">Read More</button>
+            </div>
+        </div>
+    </div>
+</div>
