--- a/app/src/app/lab-members/component/lab-members/lab-members.component.scss
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.scss
@@ -3,6 +3,9 @@
   border-bottom: 3px solid #323037;
 }
 
+.b-b {
+  border-bottom:2px solid #323037;
+}
 
 .card {
   background-color: white;
@@ -11,12 +14,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
-  &:hover {
-    .card__image {
-      filter: contrast(100%);
-    }
-  }
+  height: 100%;
 }
 
 .members-title {
@@ -28,19 +26,25 @@
 }
 
 .members-text {
-  flex: 1 1 auto;
-  font-size: 20px;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 .members-btn {
   background-color: white;
   border: 1px solid gray;
-  //border-radius: 1rem;
   color: #868686;
   padding: 0.5rem;
   text-transform: uppercase;
   display: block;
   width: 100%;
+  margin-top: auto;
+  text-align: center;
+  transition: all .4s ease-in-out;
+  &:hover {
+    background: #868686;
+    color: white;
+  }
 }
 
 
@@ -48,29 +52,31 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-  filter: contrast(70%);
-  //filter: saturate(180%);
-  background-image: url("src/assets/images/lab-members-aleksandar.jpg");
-  overflow: hidden;
   position: relative;
-  transition: filter 0.5s cubic-bezier(.43, .41, .22, .91);;
-
+  height: 300px;
+  transition: all .4s ease-in-out;
+  cursor: pointer;
   &::before {
-    content: "";
-    display: block;
-    padding-top: 56.25%; // 16:9 aspect ratio
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #484848;
+    opacity: .5;
+    transition: all .4s ease-in-out;
   }
+}
 
-  @media(min-width: 40rem) {
-    &::before {
-      padding-top: 66.6%; // 3:2 aspect ratio
-    }
-  }
+.members-image:hover::before {
+  background: transparent;
 }
 
 
 .members-wrapper {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
