chore() adding layout for lab-member single page

--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -1,7 +1,5 @@
 <div class="main flex jc-center ai-center">
-    <div class="col-5 c-light z-index ta-center">
-        <h1>{{page.title}}</h1>
-    </div>
+    <h1 class="ta-center b-b">{{page.title}}</h1>
 </div>
 
 <zg-block-renderer *ngIf="page.blocks" [blocks]="page.blocks"></zg-block-renderer>
