--- a/app/src/app/lab-members/component/lab-member/lab-member.component.html
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.html
@@ -1,1 +1,13 @@
-<p>lab-member works!</p>
+<div class="main flex jc-center ai-center">
+    <h1 class="ta-center b-b">{{item.title}}</h1>
+</div>
+<div class="grid jc-between m-y-xl">
+    <div class="col-6 members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
+    <div class="col-6 members-info p-x-l">
+        <h3>{{item.title}}</h3>
+        <p class="members-text m-y-s" [innerHTML]="item.description | text"></p>
+        <div class="button-wrapper flex jc-end">
+            <a routerLink="/lab-members" class="members-btn">Other Members</a>
+        </div>
+    </div>
+</div>
