--- a/app/src/app/news/component/news/news.component.scss
+++ b/app/src/app/news/component/news/news.component.scss
@@ -1,19 +1,10 @@
 .main {
-  height: 100vh;
-  background: url("../../../../assets/images/news-main.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  &::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #484848;
-    opacity: .4;
-  }
+  height: 500px;
+  border-bottom: 3px solid #323037;
+}
+
+.b-b {
+  border-bottom:2px solid #323037;
 }
 
 .img-wrapper {
