--- a/app/src/app/publications/component/publications/publications.component.scss
+++ b/app/src/app/publications/component/publications/publications.component.scss
@@ -1,10 +1,10 @@
 .main {
-  height: 100vh;
-  background-image: url("../../../../assets/images/publications.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin-top: -65px;
+  height: 500px;
+  border-bottom: 3px solid #323037;
+}
+
+.b-b {
+  border-bottom:2px solid #323037;
 }
 
 
@@ -17,4 +17,78 @@
 .link {
   font-size: 23px;
   text-decoration: underline;
+}
+
+body {
+  background: #aaa!important;
+}
+
+
+.pub-select {
+  position: relative;
+  color: #919090;
+  width: 80%;
+  border: 1px solid #d8d8d8;
+  border-radius: 2px;
+  text-align: center;
+  text-align-last: center;
+  padding: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  font-size: 15px;
+  padding-left: 10px;
+  padding-right: 24px;
+  &:after {
+    content: "";
+    position: absolute;
+    right: 25px;
+    top: 14px;
+    border-bottom: 2px solid #989797;
+    border-right: 2px solid #989797;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    width: 9px;
+    height: 9px;
+  }
+}
+
+.pub-sidebar {
+  width: 350px;
+}
+
+.pub-container {
+  border-left: 1px solid #868686;
+}
+
+.pub-wrapper {
+  border: 1px solid #868686;
+  padding: 20px;
+}
+
+.pub-year {
+  letter-spacing: normal;
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 0;
+  position: relative;
+  text-align: left;
+  color: #adadaf;
+  width: 100%;
+  &:before {
+    position: absolute;
+    right: 100%;
+    left: -75px;
+    top: 2px;
+    width: 16px;
+    height: 16px;
+    border: 5px solid white;
+    background: #b8b8ba;
+    content: "";
+    border-radius: 100%;
+    outline: none;
+    background-clip: padding-box;
+    overflow: hidden;
+  }
 }
