--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -1,219 +1,52 @@
 
-h1 {
-  font-family: Particle;
+.container.gallery-container {
+  background-color: #fff;
+  color: #35373a;
+  min-height: 100vh;
+  padding: 30px 50px;
 }
 
- h2, h3, h4, p {
-  font-family: Futura;
-}
-
-.card {
-  align-content: center;
-  box-shadow: 8px 4px 8px 4px rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-
-.card:hover {
-  box-shadow: 16px 8px 16px 8px rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  align-content: center;
-}
-
-.image-cropper {
-  max-width: 100px;
-  height: auto;
-  position: relative;
-  overflow: hidden;
-  align-content: center;
-}
-
-.lab-member-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
+.gallery-container h1 {
   text-align: center;
+  margin-top: 50px;
+  font-family: 'Particle', sans-serif;
+  font-weight: normal;
 }
 
-.title {
-  color: grey;
-  font-size: 18px;
+.tz-gallery {
+  padding: 40px;
 }
 
-.research-section {
-  display: flex;
+/* Override bootstrap column paddings */
+.tz-gallery .row > div {
+  padding: 2px;
 }
 
-.research-image-block {
-  &-wrapper {
-    width: 50%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 20px;
-  }
-
-  &-text {
-    font-family: "Futura", Arial, Helvetica, sans-serif;
-    width: 65%;
-    text-align: right;
-  }
-
-  &-left {
-    font-family: "Futura", Arial, Helvetica, sans-serif;
-    width: 60%;
-    text-align: left;
-  }
-
-  &-title {
-    color: #484848 !important;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-  &-subtitle {
-    font-size: 1.7em;
-    color: #aaa;
-  }
-
-  &-name {
-    text-transform: uppercase;
-    font-size: 0.9em;
-    color: #aaa;
-  }
-
-  &-content {
-    color: #666;
-    font-size: 15px;
-  }
-
-  &-image {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &-bg {
-
-    height: 200px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    border: 9px solid #868686;
-    border-radius: 50%;
-  }
-}
-
-.even {
-  flex-direction: row-reverse;
-  text-align: left;
-}
-
-.btn {
-  background-color: white;
-  border: 1px solid gray;
-  //border-radius: 1rem;
-  color: #868686;
-  padding: 0.5rem;
-  text-transform: uppercase;
-  display: block;
+.tz-gallery .lightbox img {
   width: 100%;
-}
-
-.btn--block {
-
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.cards__item {
-  display: flex;
-  padding: 1rem;
-  @media(min-width: 40rem) {
-    width: 50%;
-  }
-  @media(min-width: 56rem) {
-    width: 33.3333%;
-  }
-}
-
-.card {
-  background-color: white;
-  border-radius: 0.25rem;
-  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-
-  &:hover {
-    .card__image {
-      filter: contrast(100%);
-    }
-  }
-}
-
-.card_content {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  padding: 1rem;
-}
-
-.members-image {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-  filter: contrast(70%);
-  //filter: saturate(180%);
-  overflow: hidden;
+  border-radius: 0;
   position: relative;
-  transition: filter 0.5s cubic-bezier(.43, .41, .22, .91);;
+}
 
-  &::before {
-    content: "";
-    display: block;
-    padding-top: 56.25%; // 16:9 aspect ratio
+.tz-gallery .lightbox:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(46, 132, 206, 0.7);
+  content: '';
+  transition: 0.4s;
+}
+
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+  opacity: 1;
+}
+
+@media(max-width: 768px) {
+  body {
+    padding: 0;
   }
-
-  @media(min-width: 40rem) {
-    &::before {
-      padding-top: 66.6%; // 3:2 aspect ratio
-    }
-  }
-}
-
-.card__image--lab-member {
-  background-image: url("src/assets/images/lab-members-vlatka.jpg");
-}
-
-.card__image--lab-member-aleksandar {
-  background-image: url("src/assets/images/lab-members-aleksandar.jpg");
-}
-
-.members-title {
-  color: gray;
-  font-size: 1.25rem;
-  font-weight: 300;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-.members-text {
-  flex: 1 1 auto;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  margin-bottom: 1.25rem;
-}
-
-.lab-member-text {
-  width: 650px;
-  margin: 0 0 100px 50px;
 }
