chore() adding layout for publications

--- a/app/src/app/publications/component/publications/publications.component.scss
+++ b/app/src/app/publications/component/publications/publications.component.scss
@@ -76,6 +76,7 @@ body {
   text-align: left;
   color: #adadaf;
   width: 100%;
+  margin-left: 70px;
   &:before {
     position: absolute;
     right: 100%;
