--- a/app/src/app/publications/component/publications/publications.component.scss
+++ b/app/src/app/publications/component/publications/publications.component.scss
@@ -25,7 +25,6 @@ body {
 
 
 .pub-select {
-  position: relative;
   color: #919090;
   width: 80%;
   border: 1px solid #d8d8d8;
@@ -41,7 +40,7 @@ body {
   padding-left: 10px;
   padding-right: 24px;
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     right: 25px;
     top: 14px;
@@ -92,4 +91,20 @@ body {
     background-clip: padding-box;
     overflow: hidden;
   }
+}
+
+option  {
+  font-weight: normal;
+  display: block;
+  white-space: pre;
+  min-height: 1.2em;
+  padding: 0px 2px 1px;
+}
+
+
+.select-wrapper {
+  position: relative;
+  width: 100%;
+  margin-left: auto;
+  margin-right: 0;
 }
