--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,54 +1,30 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
-</head>
-<body>
-
-<div class="container gallery-container">
-    <h1>Our Photo Gallery</h1>
-    <div class="tz-gallery">
-        <div class="row">
-            <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/bridge.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/bridge.jpg" alt="Bridge">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/park.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/park.jpg" alt="Park">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/tunnel.jpg" alt="Tunnel">
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/traffic.jpg" alt="Traffic">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/rails.jpg" alt="Coast">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg">
-                    <img src="https://raw.githubusercontent.com/LeshikJanz/libraries/master/Related%20images/Bootstrap%20example/coast.jpg" alt="Rails">
-                </a>
-            </div>
+<h1 class="m-t-l ta-center">This is our photo Gallery</h1>
+<!--
+<img class="col-6" src="assets/images/landing.png">
+<img class="col-6" src="assets/images/lab-members-vlatka.jpg">
+<img class="col-6" src="assets/images/lab-members-aleksandar.jpg">
+<img class="col-6" src="assets/images/landing.png">
+<img class="col-6" src="assets/images/lab-members-vlatka.jpg">
+<img class="col-6" src="assets/images/lab-members-aleksandar.jpg">
+-->
+<div class="container">
+    <div class="gallery">
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/landing.png">
+        </div>
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
+        </div>
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
+        </div>
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/landing.png">
+        </div>
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
+        </div>
+        <div class="gallery-item">
+            <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
         </div>
     </div>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
-<script>
-  baguetteBox.run('.tz-gallery');
-</script>
-</body>
-</html>
