--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -1,52 +1,79 @@
+/*
+img {
+  width: 30%;
+  float:left;
+  margin:1.66%;
+}
+*/
+:root {
+  /* Base font size */
+  font-size: 10px;
+}
 
-.container.gallery-container {
-  background-color: #fff;
-  color: #35373a;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
   min-height: 100vh;
-  padding: 30px 50px;
+  background-color: #fafafa;
 }
 
-.gallery-container h1 {
+.container {
+  max-width: 100rem;
+  margin: 0 auto;
+  padding: 0 2rem 2rem;
+}
+.heading {
+  font-family: "Montserrat", Arial, sans-serif;
+  font-size: 4rem;
+  font-weight: 500;
+  line-height: 1.5;
   text-align: center;
-  margin-top: 50px;
-  font-family: 'Particle', sans-serif;
-  font-weight: normal;
+  padding: 3.5rem 0;
+  color: #1a1a1a;
 }
 
-.tz-gallery {
-  padding: 40px;
+.heading span {
+  display: block;
 }
 
-/* Override bootstrap column paddings */
-.tz-gallery .row > div {
-  padding: 2px;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -1rem -1rem;
 }
 
-.tz-gallery .lightbox img {
-  width: 100%;
-  border-radius: 0;
-  position: relative;
+.gallery-item {
+  flex: 1 0 24rem;
+  margin: 1rem;
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  overflow: hidden;
 }
 
-.tz-gallery .lightbox:after {
-  position: absolute;
-  top: 0;
-  left: 0;
+.gallery-image {
+  display: block;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  background-color: rgba(46, 132, 206, 0.7);
-  content: '';
-  transition: 0.4s;
+  object-fit: cover;
+  transition: transform 400ms ease-out;
 }
 
-.tz-gallery .lightbox:hover:after,
-.tz-gallery .lightbox:hover:before {
-  opacity: 1;
+.gallery-image:hover {
+  transform: scale(1.15);
 }
 
-@media(max-width: 768px) {
-  body {
-    padding: 0;
+@supports (display: grid) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+    grid-gap: 2rem;
+  }
+
+  .gallery,
+  .gallery-item {
+    margin: 0;
   }
 }
