edit: removed unnecesary code

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,4 +1,4 @@
-<h1 class="m-t-l ta-center">This is our photo Gallery</h1>
+<h1 class="m-t-l ta-center m-b-l">This is our photo Gallery</h1>
 <div class="container">
     <div class="gallery">
         <div class="gallery-item">
