chore() adding fields for blocks

--- a/app/src/app/publications/component/publications/publications.component.scss
+++ b/app/src/app/publications/component/publications/publications.component.scss
@@ -40,7 +40,8 @@ body {
   padding-left: 10px;
   padding-right: 24px;
   &:after {
-    content: '';
+    font-family: FontAwesome;
+    content: '\f107';
     position: absolute;
     right: 25px;
     top: 14px;
