--- a/app/src/app/components/blocks/images-block/images-block.component.html
+++ b/app/src/app/components/blocks/images-block/images-block.component.html
@@ -7,7 +7,7 @@
         <div class="col-5 ta-center flex jc-center" *ngFor="let image of data.galleryImages">
             <div class="wrapper">
                 <img [src]="image.image" alt="" class="images-block-image">
-                <div class="w-full content-wrapper bg-light flex ai-center jc-center p-y-m m-t-s">
+                <div class="w-full content-wrapper bg-light flex ai-center jc-center p-y-m">
                 <p>{{image.contentLink}}</p>
                 </div>
             </div>
