--- a/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
+++ b/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
@@ -1,7 +1,7 @@
 <section class="research-image-block m-y-xl">
     <div class="grid jc-start">
         <div class="col-12 ta-center m-y-l" *ngIf="data.title || data.subTitle">
-            <h2 class="research-image-block-title" *ngIf="data.title">{{data.title}}</h2>
+            <h2 class="research-image-block-title m-y-s" *ngIf="data.title">{{data.title}}</h2>
             <p class="research-image-block-subtitle" *ngIf="data.subTitle">{{data.subTitle}}</p>
         </div>
         <div class="research-image-block-wrapper m-b-l" *ngFor="let feature of data.features;  let odd = odd" [class.even]="odd">
@@ -11,8 +11,8 @@
                 <p class="research-image-block-content" [innerHTML]="feature.content | MTH"></p>
             </div>
             <div class="research-image-block-image br-circle">
-                <div class="research-image-block-bg">
-                    <img [src]="feature.image" [alt]="feature.alt" />
+                <div class="research-image-block-bg flex jc-center ai-center">
+                    <img [src]="feature.image" class="br-circle h-full" [alt]="feature.alt" />
                 </div>
             </div>
         </div>
