--- a/app/src/app/components/blocks/images-block/images-block.component.html
+++ b/app/src/app/components/blocks/images-block/images-block.component.html
@@ -8,7 +8,7 @@
             <div class="wrapper">
                 <img [src]="image.image" alt="" class="images-block-image">
                 <div class="w-full content-wrapper bg-light flex ai-center jc-center p-y-m">
-                <p>{{image.contentLink}}</p>
+                <p>{{image.title}}</p>
                 </div>
             </div>
         </div>
