chore(researches.component) mobile adjustments

--- a/app/src/app/researches/component/researches/researches.component.html
+++ b/app/src/app/researches/component/researches/researches.component.html
@@ -5,13 +5,13 @@
 <zg-block-renderer *ngIf="page.blocks" [blocks]="page.blocks"></zg-block-renderer>
 
 <section class="m-y-xl">
-    <div class="grid jc-center">
-        <div class="col-6" *ngFor="let item of items$ | async; let odd = odd">
-            <div class="research-image-block-wrapper m-b-l" [class.even]="odd">
+    <div class="grid jc-start">
+        <div class="col-6 col-s-12" *ngFor="let item of items$ | async; let odd = odd last as last;">
+            <div class="research-image-block-wrapper m-b-l" [class.even]="odd" [class.m-b-l]="!last">
                 <div class="research-image-block-text" [class.text]="odd">
                     <h5 class="research-title">{{item.title}}</h5>
-                    <p class="research-author">{{item.author}}</p>
-                    <p class="research-content m-y-s" [innerHTML]="item.description | text"></p>
+                    <p class="research-author m-y-s">{{item.author}}</p>
+                    <p class="research-content" [innerHTML]="item.description | text"></p>
                     <div class="research-button-wrapper w-full flex jc-end" [class.flex-end]="odd">
                         <a [routerLink]="item.route" class="research-btn">Read More</a>
                     </div>
