--- a/app/src/app/lab-members/component/lab-members/lab-members.component.html
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.html
@@ -2,7 +2,7 @@
     <h1 class="ta-center b-b">{{page.title}}</h1>
 </div>
 <div class="grid m-y-xl">
-    <div class="col-4" *ngFor="let item of items$ | async">
+    <div class="col-4 col-s-6 col-xs-12" *ngFor="let item of items$ | async">
         <div class="card">
             <div class="members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
             <div class="flex flex-1 fd-col members-wrapper">
