edit: photo gallery

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,22 +1,22 @@
 <h1 class="m-t-l ta-center m-b-l">This is our photo Gallery</h1>
 <div class="container">
-    <div class="gallery">
-        <div class="gallery-item">
+    <div class="gallery flex">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/landing.png">
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/landing.png">
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
         </div>
-        <div class="gallery-item">
+        <div class="gallery-item col-4">
             <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
         </div>
     </div>
