--- a/app/src/app/components/blocks/news-block/news-block.component.html
+++ b/app/src/app/components/blocks/news-block/news-block.component.html
@@ -4,11 +4,11 @@
             <h1 *ngIf="data.title">{{data.title}}</h1>
             <h4 *ngIf="data.subTitle" class="info m-t-m m-b-l">{{data.subTitle}}</h4>
         </div>
-        <div class="col-5 ta-center flex jc-center" *ngFor="let image of data.galleryImages">
+        <div class="col-5 ta-center flex jc-center" *ngFor="let item of news$ | async">
             <div class="wrapper">
-                <img [src]="image.image" alt="" class="images-block-image">
+                <img [src]="item.image" alt="" class="images-block-image">
                 <div class="w-full content-wrapper bg-light flex ai-center jc-center p-y-m">
-                    <a routerLink="/news">{{image.title}}</a>
+                    <a [routerLink]="['news', item.id]">{{item.title}}</a>
                 </div>
             </div>
         </div>
