--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -9,24 +9,19 @@
         <div class="col-10 flex jc-center pub-wrapper">
             <div class="pub-sidebar m-t-m">
                 <div class="select-wrapper">
-                <select name="" id="" class="pub-select">
-                    <option value="" class="option-value">Select a year</option>
-                    <option value="" class="option-value">2020</option>
-                    <option value="" class="option-value">2019</option>
-                    <option value="" class="option-value">2018</option>
-                    <option value="" class="option-value">2017</option>
-                    <option value="" class="option-value">2016</option>
-                    <option value="" class="option-value">2015</option>
-                </select>
+                    <select class="pub-select" (change)="yearSelected($event)">
+                        <option value="" class="option-value">Select a year</option>
+                        <option *ngFor="let year of items$ | async" [value]="year.year" class="option-value">{{year.year}}</option>
+                    </select>
                 </div>
             </div>
             <div class="col-8 pub-container m-t-m">
-                <div class="year-wrapper m-y-m" *ngFor="let year of items$ | async">
+                <div class="year-wrapper m-y-m" *ngFor="let year of items$ | async" [id]="year.year">
                     <h2 class="pub-year">{{year.year}}</h2>
-                <div class="wrapper flex p-x-l fw-wrap" *ngFor="let item of year.publications">
-                    <p class="publication"><span class="name">{{item.name}}</span><b>{{item.title}}</b> <br> <span>{{item.description}}</span></p>
-                    <a [routerLink]="item.route" class="link">Publication</a>
-                </div>
+                    <div class="wrapper flex p-x-l fw-wrap" *ngFor="let item of year.publications">
+                        <p class="publication"><span class="name">{{item.name}}</span><b>{{item.title}}</b> <br> <span>{{item.description}}</span></p>
+                        <a [routerLink]="item.route" class="link">Publication</a>
+                    </div>
                 </div>
             </div>
         </div>
