--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -5,11 +5,11 @@
 <zg-block-renderer *ngIf="page.blocks" [blocks]="page.blocks"></zg-block-renderer>
 
 <section class="m-y-xl">
-    <div class="grid">
+    <div class="grid jc-start">
         <div class="col-12 m-y-l ta-center">
             <h1>Read about our news</h1>
         </div>
-        <div class="col-4" *ngFor="let item of items$ | async">
+        <div class="col-4 col-s-6 col-xs-12" *ngFor="let item of items$ | async">
             <div class="card br-rounded">
                 <div class="img-wrapper" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
                 <div class="news-info ta-left">
