--- a/app/src/app/lab-members/component/lab-members/lab-members.component.scss
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.scss
@@ -1,5 +1,5 @@
 .main {
-  height: 500px;
+  height: 200px;
   border-bottom: 3px solid #323037;
 }
 
@@ -10,11 +10,24 @@
 .card {
   background-color: white;
   border-radius: 0.25rem;
-  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
+  border: 1px solid #868686;
   flex-direction: column;
   overflow: hidden;
   height: 100%;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
+  .members-image:before {
+    background: transparent;
+  }
+  .members-btn {
+    background: #868686;
+    color: white;
+  }
 }
 
 .members-title {
@@ -41,12 +54,7 @@
   margin-top: auto;
   text-align: center;
   transition: all .4s ease-in-out;
-  &:hover {
-    background: #868686;
-    color: white;
-  }
 }
-
 
 .members-image {
   background-position: center center;
@@ -68,11 +76,6 @@
     transition: all .4s ease-in-out;
   }
 }
-
-.members-image:hover::before {
-  background: transparent;
-}
-
 
 .members-wrapper {
   padding: 20px;
