--- a/app/src/app/lab-members/component/lab-members/lab-members.component.html
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.html
@@ -1,7 +1,7 @@
 <div class="main flex jc-center ai-center m-t-m">
     <h1 class="ta-center b-b">{{page.title}}</h1>
 </div>
-<div class="grid m-y-xl">
+<div class="grid jc-start m-y-xl">
     <div class="col-4 col-s-6 col-xs-12 m-y-s" *ngFor="let item of items$ | async">
         <a [routerLink]="item.route" class="card">
             <div class="members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
