--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -29,7 +29,7 @@
             <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
             <p>Horvatovac 102A</p>
             <p>10 000 Zagreb, Croatia</p>
-            <p>Tel- +385 1 4606260</p>
+            <a href="tel:+38514606260">Tel- +385 1 4606260</a>
             <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
         </div>
         </section>
