--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -27,10 +27,11 @@
             <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of
                 Biology,</b></p>
             <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
-            <p>Horvatovac 102A</p>
+            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">Horvatovac 102A</a><br>
             <p>10 000 Zagreb, Croatia</p>
-            <a href="tel:+38514606260">Tel- +385 1 4606260</a>
-            <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
+            <a class="footer-paragraph m-b-m" href="tel:+38514606260">Tel- +385 1 4606260</a>
+            <br>
+            <a class="footer-paragraph m-b-l" href="tel:+38514606286">Fax- +385 1 4606286</a>
         </div>
         </section>
 </footer>
