edit: edited hamburger menu

--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -16,6 +16,11 @@
   &-menu {
     background: none;
     border: none;
+    visibility: hidden;
+
+    @media (max-width:765px) {
+      visibility: visible;
+    }
 
   }
 
