--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -8,7 +8,7 @@
         <button class="header-menu">
             <img src="assets/icons/ham-menu.svg" alt="">
         </button>
-        <div class="header-links active">
+        <div class="header-links">
             <a *ngFor="let link of settings.links" [routerLink]="[link.link]" routerLinkActive="active"
                class="links" [routerLinkActiveOptions]="{exact: true}">{{link.title}}</a>
         </div>
