--- a/app/src/scss/01-generic/_generic.scss
+++ b/app/src/scss/01-generic/_generic.scss
@@ -42,13 +42,14 @@ body {
 /* Headings
  *============================================================================*/
 h1 {
-  font-family: "Particle", sans-serif;
+  font-family: "Futura", sans-serif;
+  text-transform: uppercase;
 }
 
  h2, h3, h4, h5 {
   line-height: 1.4;
   font-weight: normal;
-  font-family: "Futura", sans-serif;
+  font-family: "NeutraText-Book", sans-serif;
 }
 
 h1 { font-size: 50px; }
