edit: font pairings

--- a/app/src/scss/01-generic/_generic.scss
+++ b/app/src/scss/01-generic/_generic.scss
@@ -15,8 +15,8 @@
 }
 
 @font-face {
-  font-family: 'Particle';
-  src: url("assets/fonts/Particle-Regular.otf");
+  font-family: 'NeutraText-Book';
+  src: url("assets/fonts/NeutraText-Book.otf");
   font-weight: normal;
 }
 
