--- a/app/src/scss/01-generic/_generic.scss
+++ b/app/src/scss/01-generic/_generic.scss
@@ -26,7 +26,7 @@
 html {
   font-size: 16px;
   line-height: 1.8;
-  font-family: 'Futura', sans-serif;
+  font-family: 'NeutraText-Book', sans-serif;
 }
 
 
@@ -46,7 +46,7 @@ h1 {
   text-transform: uppercase;
 }
 
- h2, h3, h4, h5 {
+ h2, h3, h4, h5, p {
   line-height: 1.4;
   font-weight: normal;
   font-family: "NeutraText-Book", sans-serif;
