chore() adding researches-block

--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -8,7 +8,7 @@
         <button class="header-menu">
             <img src="assets/icons/ham-menu.svg" alt="Menu open icon">
         </button>
-        <div class="header-links">
+        <div class="header-links hide-s">
             <a
                 *ngFor="let link of settings.links"
                 (click)="goTo([link.link])"
