--- a/app/src/app/components/blocks/news-block/news-block.component.html
+++ b/app/src/app/components/blocks/news-block/news-block.component.html
@@ -5,8 +5,8 @@
             <h4 *ngIf="data.subTitle" class="info m-t-m m-b-l">{{data.subTitle}}</h4>
         </div>
         <div class="col-5 ta-center flex jc-center" *ngFor="let item of news$ | async">
-            <div class="wrapper">
-                <img [src]="item.image" alt="" class="images-block-image">
+            <div class="wrapper font-secondary">
+                <img [src]="item.image" alt="" class="images-block-image obj-cover">
                 <div class="w-full content-wrapper bg-light flex ai-center jc-center p-y-m">
                     <a [routerLink]="['news', item.id]">{{item.title}}</a>
                 </div>
