--- a/app/src/scss/03-utilities/_utilities.scss
+++ b/app/src/scss/03-utilities/_utilities.scss
@@ -127,8 +127,8 @@
 /* Fonts
  *============================================================================*/
 
-.font-primary   { font-family: "Nexa-Light", sans-serif; }
-.font-secondary { font-family: "Nexa-Bold", sans-serif; }
+.font-primary   { font-family: 'Futura', sans-serif; }
+.font-secondary { font-family: "NeutraText-Book", sans-serif; }
 .font-tertiary  { font-family: "ITC-Stone-Serif-Std-Medium", serif; }
 
 
