--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -53,7 +53,7 @@ research-info {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
-    height: 300px;
+    min-height: 400px;
     font-family: "Raleway", Arial, Helvetica, sans-serif;
   }
 
