chore() adding featured researches

--- a/app/src/app/components/blocks/researches-block/researches-block.component.html
+++ b/app/src/app/components/blocks/researches-block/researches-block.component.html
@@ -7,6 +7,8 @@
         <div class="research-image-block-wrapper m-b-l" *ngFor="let item of researches$ | async;  let odd = odd" [class.even]="odd">
             <div class="research-image-block-text" [class.even]="odd">
                 <h5 class="research-image-block-title">{{item.title}}</h5>
+                <p class="research-image-block-name m-y-s" *ngIf="item.author">{{item.author}}</p>
+                <p class="research-image-block-content" [innerHTML]="item.content | MTH"></p>
             </div>
             <div class="research-image-block-image br-circle">
                 <div class="research-image-block-bg flex jc-center ai-center">
