--- a/app/src/app/researches/component/researches/researches.component.html
+++ b/app/src/app/researches/component/researches/researches.component.html
@@ -2,6 +2,8 @@
     <h1 class="ta-center b-b">{{page.title}}</h1>
 </div>
 
+<zg-block-renderer *ngIf="page.blocks" [blocks]="page.blocks"></zg-block-renderer>
+
 <section class="m-y-xl">
     <div class="grid jc-start">
         <div class="col-6 col-s-12" *ngFor="let item of items$ | async; let odd = odd last as last;">
