--- a/app/src/app/lab-members/component/lab-members/lab-members.component.html
+++ b/app/src/app/lab-members/component/lab-members/lab-members.component.html
@@ -4,7 +4,7 @@
 <div class="grid jc-start m-y-xl">
     <div class="col-4 col-s-6 col-xs-12 m-y-s" *ngFor="let item of items$ | async">
         <a [routerLink]="item.route" class="card">
-            <div class="members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
+            <div class="members-image" [ngStyle]="{'background-image': 'url('+ item.thumbImage +')'}"></div>
             <div class="flex flex-1 fd-col members-wrapper">
                 <div class="members-title">{{item.title}}</div>
                 <p class="members-text m-y-s" [innerHTML]="item.description | text"></p>
