--- a/app/src/app/researches/component/researches/researches.component.html
+++ b/app/src/app/researches/component/researches/researches.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="research-image-block-image br-circle">
-                    <div class="research-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}">
+                    <div class="research-image" [ngStyle]="{'background-image': 'url('+ item.thumbImg +')'}">
                     </div>
                 </div>
             </div>
