edit: contact us content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -20,3 +20,27 @@
             <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
         </div>
     </div>
+
+<section>
+    <div class="contact-us">
+        <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
+
+        <div class="contact-us-left">
+        <img class="contact-us-photo" src="assets/images/contact-us-photo.jpg">
+        </div>
+
+        <div class="contact-us-right ta-center">
+        <h2 class="m-a-m">Vlatka Zoldoš</h2>
+            <h3>Principle Investigator</h3>
+            <h3>Laboratory for Epigenetics</h3>
+            <h5 class="m-a-s">e-mail: vzoldos@biol.pmf.hr</h5>
+            <h3 class="m-a-m">Location:</h3>
+            <h5>BIOCentre - Incubation centre for biosceinces</h5>
+            <h5>Borongajska cesta 83</h5>
+            <h5>10000 Zagreb, Croatia </h5>
+
+        </div>
+    </div>
+
+
+</section>
