chore(two-block-text) mobile adjustments

--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.html
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.html
@@ -1,11 +1,11 @@
 <section class="two-block-text m-y-l">
     <div class="grid ai-center">
-        <div class="wrapper flex ai-start jc-around">
-            <div class="col-5">
+        <div class="col-10 col-s-12 flex fw-wrap ai-start jc-around">
+            <div class="col-5 col-s-12">
                 <h1 class="name c-dark fw-normal">{{data.name}}</h1>
                 <p class="info m-t-m">{{data.info}}</p>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-s-12">
                 <p class="bio m-b-m">{{data.bio}}</p>
                 <p class="bio m-t-m">{{data.bioTwo}}</p>
             </div>
