edit: contact us page changes in html and CSS

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -27,6 +27,7 @@
 
             <div class="contact-us-left">
                 <img class="contact-us-photo" src="assets/images/contact-us-photo.jpg">
+                <img src="assets/images/face-logo.png"
             </div>
 
             <div class="contact-us-right ta-center m-l-l">
