edit: contact us page social media icons

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -27,7 +27,9 @@
 
             <div class="contact-us-left">
                 <img class="contact-us-photo" src="assets/images/contact-us-photo.jpg">
-                <img src="assets/images/face-logo.png"
+                <img src="assets/icons/face-logo.svg"
+                <img src="assets/icons/linkedin-logo.svg"
+                <img src="assets/icons/researchgate-logo.svg"
             </div>
 
             <div class="contact-us-right ta-center m-l-l">
