feat(): changed naming for Cms

--- a/app/src/app/components/blocks/gallery-block/gallery-block.component.html
+++ b/app/src/app/components/blocks/gallery-block/gallery-block.component.html
@@ -1,1 +1,20 @@
-<p>gallery-block works!</p>
+<div class="gallery flex">
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/landing.png">
+    </div>
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
+    </div>
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
+    </div>
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/landing.png">
+    </div>
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
+    </div>
+    <div class="gallery-item col-4">
+        <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
+    </div>
+</div>
