edit: contact us page style changes

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -23,16 +23,29 @@
 
     <section>
         <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
-        <div class="contact-us">
+        <div class="flex ai-start">
 
             <div class="contact-us-left">
                 <img class="contact-us-photo" src="assets/images/contact-us-photo.jpg">
-                <img src="assets/icons/face-logo.svg"
-                <img src="assets/icons/linkedin-logo.svg"
-                <img src="assets/icons/researchgate-logo.svg"
+
+                <a href="https://www.facebook.com/CRISPR.EpigeneticsGlycosylation/?_rdc=1&_rdr">
+                    <img class="m-a-m m-x-l" alt="facebook" src="assets/images/face-logo.png"
+                         width="40" height="40">
+                </a>
+
+                <a href="https://www.linkedin.com/in/vlatka-zoldo%C5%A1-b4091b66/?originalSubdomain=hr">
+                    <img class="m-a-m m-x-xl" alt="linkedin" src="assets/images/linkedin-logo.png"
+                         width="30" height="30">
+                </a>
+
+                <a href="https://www.researchgate.net/profile/Vlatka_Zoldos2">
+                    <img class="m-a-m m-x-l" alt="researchgate" src="assets/images/researchgate-logo.png"
+                         width="35" height="35">
+                </a>
+
             </div>
 
-            <div class="contact-us-right ta-center m-l-l">
+            <div class="contact-us-right ta-center p-x-m">
                 <h2 class="m-a-m">Vlatka Zoldoš</h2>
                 <h4>Principle Investigator</h4>
                 <h4>Laboratory for Epigenetics</h4>
