--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -42,11 +42,10 @@
                     <img class="m-a-m m-x-l" alt="researchgate" src="assets/images/researchgate-logo.png"
                          width="35" height="35">
                 </a>
-
             </div>
 
             <div class="contact-us-right ta-center p-x-m">
-                <h2 class="m-a-m">Vlatka Zoldoš</h2>
+                <h2 class="m-a-m">Vlatka Zoldoš asdas</h2>
                 <h4>Principle Investigator</h4>
                 <h4>Laboratory for Epigenetics</h4>
                 <p class="m-a-s">e-mail: vzoldos@biol.pmf.hr</p>
